CHadded text for Ch3 of Guidelines paper, and few small edits through Case Study paper

--- a/caseStudyWP/01-chap1.Rmd
+++ b/caseStudyWP/01-chap1.Rmd
@@ -25,4 +25,4 @@ a.	Apply proposed methods to Pacific Salmon case studies over a range of data ty
 b.	For case studies, evaluate methods for developing LRPs using a combination of sensitivity analyses to key parameters and assumptions, and where possible retrospective analyses.
 -->
 
-The goals of this working paper are to demonstrate alternative LRP estimation methods for three case study SMUs that vary in data types and availablities, and then evaluate candidate LRPs using a combination of sensitivity analyses and, where possible, retrospective analyses. A full evaluation of LRPs, for examples, using closed-loop simulations, is beyond the scope of the current project and is a high priority for future research. The case studies considered were Interior Fraser Coho, West Coast Vancouver Island (WCVI) Chinook, and Inner South Coast Chum - excluding Fraser. Each of these SMUs is comprised of 3-7 CUs and has been selected to represent a different level of data availability ranging from data rich (Interior Fraser Coho) to data-limited (Inner South Coast Chum). Detailed guidelines for identifying LRPs for Pacific salmon SMUs informed by these three case study applications are available in the companion working paper (Holt et al., in review). For each case study, the set of LRP estimation methods considered is a function of available data and previously developed assessment methods for the SMU. The LRPs presented in this paper are illustrative and not meant to be definitive, as they may require more thorough review of data and methodology with local analysts and partners.  
+The goals of this working paper are to demonstrate alternative LRP estimation methods for three case study SMUs that vary in data types and availabilities, and then evaluate candidate LRPs using a combination of sensitivity analyses and, where possible, retrospective analyses. A full evaluation of LRPs, for examples, using closed-loop simulations, is beyond the scope of the current project and is a high priority for future research. The case studies considered were Interior Fraser Coho Salmon (*Oncorhynchus kisutch*), West Coast Vancouver Island (WCVI) Chinook Salmon (*Oncorhynchus tshawytscha*), and Inner South Coast Chum Salmon (*Oncorhynchus keta*) - excluding Fraser. Each of these SMUs is comprised of 3-7 CUs and has been selected to represent a different level of data availability ranging from data rich (Interior Fraser Coho) to data-limited (Inner South Coast Chum). Detailed guidelines for identifying LRPs for Pacific salmon SMUs informed by these three case study applications are available in the companion working paper (Holt et al., in review). For each case study, the set of LRP estimation methods considered is a function of available data and previously developed assessment methods for the SMU. The LRPs presented in this paper are illustrative and not meant to be definitive, as they may require more thorough review of data and methodology with local analysts and partners.  
