--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -1,4 +1,4 @@
-# Introduction {#intro}
+# INTRODUCTION {#intro}
 
 ## Background
 
@@ -34,7 +34,7 @@ Less frequently, multidimensional approaches that aggregate status over numerous
 For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks in the US (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. 
 
 
-Under Canada's WSP, status assessments generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity, with benchmarks along each metric [@holtEvaluationBenchmarksConservation2009].  One advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of CUs. A second advantage is that a single-metric dropping below the benchmark may not trigger red status over all given high variability in abundances for some CUs. In general, persistence at low levels below abundance-based benchmarks and significant declining trends are required for red status overall. <!--CH comment; this is still a problem for logistic regression based LRPs that are impacted by CUs dropping below LBMs in only a single year even if not associated with what local experts would deem serious harm. I have highlighted this as uncertainty for that approach in the last chapter of this WP.--> Expert-driven processes to integrate sometimes conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon stocks in Canada (e.g., Fraser River Sockeye Salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these expert-driven assessments is high demand on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, (Pestal et al. in prep) developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm, known as the Rapid Multidimensional Scanning Tool, was ground-truthed by local assessment experts and tested with stocks not included in the original formulation.
+Under Canada's WSP, status assessments generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity, with benchmarks along each metric [@holtEvaluationBenchmarksConservation2009].  One advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of CUs. A second advantage is that a single-metric dropping below the benchmark may not trigger red status over all given high variability in abundances for some CUs. In general, persistence at low levels below abundance-based benchmarks and significant declining trends are required for red status overall. <!--CH comment; this is still a problem for logistic regression based LRPs that are impacted by CUs dropping below LBMs in only a single year even if not associated with what local experts would deem serious harm. I have highlighted this as uncertainty for that approach in the last chapter of this WP.--> Expert-driven processes to integrate sometimes conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon stocks in Canada (e.g., Fraser River Sockeye Salmon, *Oncorhynchus nerka* [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon, *Oncorhynchus kisutch* [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon, *Oncorhynchus tshawytscha* [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these expert-driven assessments is high demand on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, (Pestal et al. in prep) developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm, known as the Rapid Multidimensional Scanning Tool, was ground-truthed by local assessment experts and tested with stocks not included in the original formulation.
 
 
 In some cases, single-metric approaches in which spawning biomass is compared with an abundance-based benchmark, have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and occasionally within DFO (e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012). While biological assessments under the WSP are implemented at the scale of Conservation Unit, CU, fisheries management often operates at larger scales, aggregating over multiple CUs. For some stock aggregates, harvest control rules are developed to achieve a low probability of  individual CUs breaching their lower benchmark on spawner abundances, among other socio-economic considerations, e.g., Fraser River sockeye salmon [@chaputConsiderationsDefiningReference2012]. This approach supports management of weak stocks and is aligned with DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009].
@@ -57,7 +57,7 @@ The Fish Stock provision pertain to the management of fisheries. For Pacific sal
 
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC and Management Units under the Pacific Salmon Treaty. These units are not aligned with the biological unit of conservation under DFO's WSP, CU, and are not considered further here.
 
-A mismatch in scales among biological stocks, the unit of management, and the spatial scale of data collection are not uncommon among marine fish species, especially invertebrate species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020], creating challenges when identifying LRPs [@dfoScienceAdvicePrecautionary2021]. This mismatch can make undesirable states in fish populations difficult to detect, and weaken the effectiveness of resulting management measures. <!--CH: could include snow crab example from Mullowney et al. 2020 if we wanted to flush this out a bit. I couldn't find any refernce for American Lobster- Adam Cook's ppt-->
+A mismatch in scales among biological stocks, the unit of management, and the spatial scale of data collection are not uncommon among marine fish species, especially invertebrate species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020], creating challenges when identifying LRPs [@dfoScienceAdvicePrecautionary2021]. This mismatch can make undesirable states in fish populations difficult to detect, and weaken the effectiveness of resulting management measures. <!--CH: could include snow crab example from Mullowney et al. 2020 if we wanted to flush this out a bit. I couldn't find any reference for American Lobster- i.e., Adam Cook's ppt from TESA workshop-->
 
 ## Goals of Working Paper
 
@@ -72,7 +72,7 @@ uncertainties arising from missing or limited CU-level data. (See \ref(recommend
 
 4. Provide guidance and recommendations on the application of candidate methods over a range of data types and availability. (see \@ref(guidelines))
 
-Pacific salmon are unique among marine fish species because of their anadromous and semelparous life-history and significant meta-population structure, which results in differences in data availability and modelling approaches for assessments. These differences necessitate advice on LRP development that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. in prep). <!--CH: add marentette et al. in prep  to zotero,--> 
+Pacific salmon are unique among marine fish species because of their anadromous and semelparous life-history and significant meta-population structure, which results in differences in data availability and modelling approaches for assessments. These differences necessitate advice on LRP development that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. in prep). <!--CH: add Marentette et al. in prep  as footnote, like Holt et al in review, and likely Pestal et al. in prep/review?--> 
 
 
 ## Scope of Working Paper
@@ -107,7 +107,7 @@ In some cases where hatchery-origin fish are not marked, data on the proportion 
 
 In addition, some populations without hatcheries may be influenced by straying from out-of-basin hatcheries. A very large fraction of fish are wild but gene flow modelling suggests a long-term increasing in genetic influence of hatcheries as straying increases [@withlerGeneticallyBasedTargets2018]. The impact of these strays are generally not included in assessments in part because of absence of visible marking on hatchery fish or genetic studies to determine their influence, and so they are included in total abundances. Studies evaluating the extent of straying for Chinook Salmon for the West Coast of Vancouver Island are on-going (W. Luedke pers. comm.)
 
-<!--CH remove: Recruitment data are generally not available for these stocks, so stock-recruitment analyses are usually not implemented. In one exception for Pitt River Sockeye Salmon,  spawner abundances were determined from brood take plus total spawners in the natural environment and recruitment was total recruits from both hatchery and natural environment (Pitt River, Grant et al. 2011).-->
+<!--CH removed: "Recruitment data are generally not available for these stocks, so stock-recruitment analyses are usually not implemented. In one exception for Pitt River Sockeye Salmon,  spawner abundances were determined from brood take plus total spawners in the natural environment and recruitment was total recruits from both hatchery and natural environment (Pitt River, Grant et al. 2011)".-->
 
 
 ## Role of LRPs {#roleLRPs}
@@ -138,11 +138,7 @@ In particular, the technical working group informed five components of the work:
 5, Recommendations on future research (see \@ref(recommendations))
 
 
-<!--
-The {#rmd-basics} text after the chapter declaration will allow us to link throughout the document back to the beginning of Chapter 1.  These labels will automatically be generated (if not specified) by changing the spaces to hyphens and capital letters to lowercase.  Look for the reference to this label at the beginning of Chapter 2.
--->
- 
- 
+<!--CH: Not sure is the R chunk below is necessary? If we remove, do we need to add gpplot2, knitr, bookdown, devtools to index file? Leave for now-->
 
 ```{r load_pkgs, message=FALSE, echo=FALSE}
 # List of packages required for this analysis
