--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -274,6 +274,16 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\WE5J4EFQ\\Debertin et al. - 2017 - Marine growth patterns of southern British Columbi.pdf}
 }
 
+@article{deckerAssessmentInteriorFraser2014,
+  title = {Assessment of the {{Interior Fraser Coho Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Kisutch}}) {{Management Unit Relative}} to the 2006 {{Conservation Strategy Recovery Objectives}}},
+  author = {Decker, A Scott and Hawkshaw, Michael A and Patten, Bruce A and Sawada, Joel and Jantz, A Lester},
+  year = {2014},
+  journal = {Canadian Science Advisory Secretariat Research Document},
+  volume = {2014/086},
+  pages = {xi + 64 p},
+  langid = {english}
+}
+
 @article{defilippoImprovingShorttermRecruitment2021,
   title = {Improving Short-Term Recruitment Forecasts for Coho Salmon Using a Spatiotemporal Integrated Population Model},
   author = {DeFilippo, Lukas B. and Buehrens, Thomas W. and Scheuerell, Mark and Kendall, Neala W. and Schindler, Daniel E.},
@@ -337,6 +347,14 @@
   langid = {english}
 }
 
+@techreport{dfoIntegratedFisheriesManagement2021,
+  title = {Integrated {{Fisheries Management Plan June}} 1, 2021 - {{May}} 31, 2022, {{Salmon Southern BC}}},
+  author = {{DFO}},
+  year = {2021},
+  pages = {599},
+  langid = {english}
+}
+
 @article{dfoManagementProcedureFramework2021,
   title = {A {{Management Procedure Framework}} for {{Groundfish In British Columbia}}},
   author = {DFO},
@@ -347,6 +365,17 @@
   abstract = {For data-limited stocks, data are often insufficient to use traditional stock assessments to determine stock status relative to biological reference points.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\5P7KAL8R\\A Management Procedure Framework for Groundfish In.pdf}
+}
+
+@article{dfoProceedingsNationalPeer2016,
+  title = {Proceedings of the {{National Peer Review}} on the {{Development}} of {{Technical Guidelines}} for the {{Provision}} of {{Scientific Advice}} on the {{Various Elements}} of {{Fisheries}} and {{Oceans Canada Precautionary Approach Framework}}; {{February}} 28-{{March}} 1, 2012},
+  author = {DFO},
+  year = {2016},
+  journal = {DFO Can. Sci. Advis. Sec. Proc. Ser.},
+  volume = {2015/005},
+  pages = {100},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\ZFZXSM8T\\Proceedings of the National Peer Review on the Dev.pdf}
 }
 
 @techreport{dfoProceedingsNationalWorkshop2013,
@@ -427,6 +456,20 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\BT3KTNQI\\Dowling et al. - 2015 - Empirical harvest strategies for data-poor fisheri.pdf}
 }
 
+@article{dowlingGuidelinesDevelopingFormal2015,
+  title = {Guidelines for Developing Formal Harvest Strategies for Data-Poor Species and Fisheries},
+  author = {Dowling, N.A. and Dichmont, C.M. and Haddon, M. and Smith, D.C. and Smith, A.D.M. and Sainsbury, K.},
+  year = {2015},
+  month = nov,
+  journal = {Fisheries Research},
+  volume = {171},
+  pages = {130--140},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2014.09.013},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\9QEIPW6J\\Dowling et al. - 2015 - Guidelines for developing formal harvest strategie.pdf}
+}
+
 @article{eckertDivingBackTime2018,
   title = {Diving Back in Time: {{Extending}} Historical Baselines for Yelloweye Rockfish with {{Indigenous}} Knowledge},
   shorttitle = {Diving Back in Time},
@@ -468,6 +511,21 @@
   abstract = {The conclusions drawn from fisheries stock assessment models can depend strongly on the relative weights assigned to different data sets. However, there is no consensus amongst practitioners as to the best approach to data weighting. From a discussion of some key questions concerning data weighting in stock assessment models, I draw three guiding principles: (i) do not let other data stop the model from fitting abundance data well; (ii) when weighting age or length composition data, allow for correlations; and (iii) do not down-weight abundance data because they may be unrepresentative. I propose an approach to data weighting based on these principles. Two factors that complicate this approach are that some decisions are inevitably subjective (which underlines the need for expert knowledge in stock assessment), and some technical problems are unresolved.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\5A3N74P6\\Francis - 2011 - Data weighting in statistical fisheries stock asse.pdf}
+}
+
+@article{freshwaterBenefitsLimitationsIncreasing2020,
+  title = {Benefits and Limitations of Increasing the Stock-Selectivity of {{Pacific}} Salmon Fisheries},
+  author = {Freshwater, Cameron and Holt, Kendra R. and Huang, Ann-Marie and Holt, Carrie A.},
+  year = {2020},
+  month = jun,
+  journal = {Fisheries Research},
+  volume = {226},
+  pages = {105509},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2020.105509},
+  abstract = {Population diversity can stabilize ecological dynamics and increase resilience to future environmental change. In exploited systems, however, management goals to preserve diversity may be in tension with harvest objectives. For example, fisheries managers may forgo opportunities to sustainably harvest abundant populations to reduce risks to less productive populations. Increasing the stock selectivity of fisheries is one management lever that may allow for both conservation- and catch-based objectives to be met. We developed a model that simulates the dynamics of a Pacific salmon stock aggregate and its fishery to evaluate how changing allocations between mixed- and single-stock fisheries influences management performance. We focused on relatively generic management strategies that may be implemented in a range of salmon fisheries. Additionally, we examined how the relative performance of mixed- and single-stock fisheries may change under alternative ecological and management scenarios. We found that increasing single-stock fishery allocations increased aggregate abundance and improved the status of some stocks relative to their conservation benchmarks. However, these improvements did not occur uniformly\textendash relatively abundant, productive stocks exhibited no change, or even declines, in conservation performance as single-stock fishery allocations increased. Furthermore, differences in performance between mixed- and single-stock fisheries were reduced when productivity was uniformly low, when the mixedstock fishery was managed conservatively, or when mortality during freshwater migrations was high. While single-stock fisheries can increase the probability that conservation-based objectives will be met, they are not a panacea and may only be effective when specific conditions are met.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\Q2PQ5PLN\\Freshwater et al. - 2020 - Benefits and limitations of increasing the stock-s.pdf}
 }
 
 @techreport{godboutStockStatusWild2004,
@@ -593,6 +651,18 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\MHF9YRE8\\Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf}
 }
 
+@book{holtQuantitativeToolEvaluating2020,
+  title = {A Quantitative Tool for Evaluating Rebuilding Plans for {{Pacific}} Salmon},
+  author = {Holt, C. A and Freshwater, C. and Holt, K.R. and Huang, A.M.},
+  year = {2020},
+  series = {Canadian {{Technical Report}} of {{Fisheries}} and {{Aquatic Sciences}}},
+  volume = {3402},
+  abstract = {"Rebuilding plans are required for depleted stocks under the Fish Stock Provisions of Canada's revised Fisheries Act (2019) and DFO's Sustainable Fisheries Framework (2009). The overall goal of this project was to create a tool for developing and evaluating the harvest component of rebuilding plans for Pacific salmon, which evaluates trade-offs between conservation objectives and other fisheries management objectives"--Abstract.},
+  isbn = {978-0-660-35946-5},
+  langid = {english},
+  annotation = {OCLC: 1199014307}
+}
+
 @techreport{hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009,
   title = {Columbia {{River Hatchery Reform SystemWide Report}}},
   author = {HSRG (Hatchery Scientific Review Group)},
@@ -610,6 +680,31 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\CP4BKWWZ\\Huang et al. - 2021 - Recovery potential assessment for Fraser River Soc.pdf}
 }
 
+@techreport{ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006,
+  title = {Conservation Strategy for {{Coho Salmon}}  ({{Oncorhynchus}} Kisutch), Interior {{Fraser River}} Populations},
+  author = {{IFCRT (Interior Fraser Coho Recovery Team)}},
+  year = {2006},
+  pages = {132},
+  institution = {{Fisheries and Oceans Canada}}
+}
+
+@article{jardimOperationalizingEnsembleModels2021,
+  title = {Operationalizing Ensemble Models for Scientific Advice to Fisheries Management},
+  author = {Jardim, Ernesto and Azevedo, Manuela and Brodziak, Jon and Brooks, Elizabeth N and Johnson, Kelli F and Klibansky, Nikolai and Millar, Colin P and Minto, C{\'o}il{\'i}n and Mosqueira, Iago and Nash, Richard D M and Vasilakopoulos, Paraskevas and Wells, Brian K},
+  editor = {Zhou, Shijie},
+  year = {2021},
+  month = aug,
+  journal = {ICES Journal of Marine Science},
+  volume = {78},
+  number = {4},
+  pages = {1209--1216},
+  issn = {1054-3139, 1095-9289},
+  doi = {10.1093/icesjms/fsab010},
+  abstract = {This paper explores the possibility of using the ensemble modelling paradigm to fully capture assessment uncertainty and improve the robustness of advice provision. We identify and discuss advantages and challenges of ensemble modelling approaches in the context of scientific advice. There are uncertainties associated with every phase in the stock assessment process: data collection, assessment model choice, model assumptions, interpretation of risk, up to the implementation of management advice. Additionally, the dynamics of fish populations are complex, and our incomplete understanding of those dynamics and limited observations of important mechanisms, necessitate that models are simpler than nature. The aim is for the model to capture enough of the dynamics to accurately estimate trends and abundance, and provide the basis for robust advice about sustainable harvests. The status quo approach to assessment modelling has been to identify the ``best'' model and generate advice from that model, mostly ignoring advice from other model configurations regardless of how closely they performed relative to the chosen model. We discuss and make suggestions about the utility of ensemble models, including revisions to the formal process of providing advice to management bodies, and recommend further research to evaluate potential gains in modelling and advice performance.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\J2QTJ4AN\\Jardim et al. - 2021 - Operationalizing ensemble models for scientific ad.pdf}
+}
+
 @article{keithPopulationDynamicsMarine2012,
   title = {Population Dynamics of Marine Fishes at Low Abundance},
   author = {Keith, David M. and Hutchings, Jeffrey A.},
@@ -625,6 +720,32 @@
   abstract = {The recovery of depleted species depends on their population dynamics at low abundance. Classical population growth models, applied widely in fisheries science, assume that per capita offspring production increases as abundance declines (compensation). However, slow or absent recovery by many depleted fishes might reflect unexpectedly weak compensation or the presence of Allee effects (depensation). Using meta-analytical techniques to describe reproductive dynamics, we find considerable variability among 207 exploited marine fish stocks (104 species) in how standardized per capita population growth changes with abundance. Although many species exhibit strong compensatory dynamics (negative density dependence), others show much weaker compensation than expected, and some exhibit evidence of an Allee effect, such as Atlantic cod (Gadus morhua) and Alaskan walleye pollock (Theragra chalcogramma). As data at low levels of abundance become increasingly available, it appears that compensation, while strong in some species, is comparatively weak or nonexistent in others, thus providing an explanation for why the recovery of some depleted stocks, despite reductions in exploitation, has been considerably less than what classic models of population growth would otherwise suggest.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\D2QMSZJ7\\Keith and Hutchings - 2012 - Population dynamics of marine fishes at low abunda.pdf}
+}
+
+@article{klaerHowMuchEvidence2015,
+  title = {How Much Evidence Is Required for Acceptance of Productivity Regime Shifts in Fish Stock Assessments: {{Are}} We Letting Managers off the Hook?},
+  shorttitle = {How Much Evidence Is Required for Acceptance of Productivity Regime Shifts in Fish Stock Assessments},
+  author = {Klaer, Neil L. and O'Boyle, Robert N. and Deroba, Jonathan J. and Wayte, Sally E. and Little, L. Richard and Alade, Larry A. and Rago, Paul J.},
+  year = {2015},
+  month = aug,
+  journal = {Fisheries Research},
+  volume = {168},
+  pages = {49--55},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2015.03.021},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\2NAZGSG7\\Klaer et al. - 2015 - How much evidence is required for acceptance of pr.pdf}
+}
+
+@article{kormanEvaluationFrameworkAssessing2019,
+  title = {Evaluation Framework for Assessing Potential {{Pacific Salmon Commission}} Reference Points for Population Status and Associated Allowable Exploitation Rates for {{Strait}} of {{Georgia}} and {{Fraser River Coho Salmon Management Units}}},
+  author = {Korman, J and Sawada, J and Bradford, M J},
+  year = {2019},
+  journal = {Canadian Science Advisory Secretariat Research Document},
+  volume = {2019/001},
+  pages = {ix + 81 p},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\55RZH9X5\\Korman et al. - Evaluation framework for assessing potential Pacif.pdf}
 }
 
 @article{kronlundConsiderationsDesignRebuilding2021,
@@ -675,6 +796,20 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\V8DR5IBU\\Lee et al. - 2019 - Diverse knowledge systems reveal social–ecological.pdf}
 }
 
+@article{liermannUsingAccessibleWatershed2010,
+  title = {Using Accessible Watershed Size to Predict Management Parameters for {{Chinook}} Salmon, ({{{\emph{Oncorhynchus}}}} Tshawytscha), Populations with Little or No Spawner-Recruit Data: A {{Bayesian}} Hierarchical Modelling Approach},
+  author = {Liermann, M. C. and Sharma, R. and Parken, C. K.},
+  year = {2010},
+  journal = {Fisheries Management and Ecology},
+  volume = {17},
+  number = {1},
+  pages = {40--51},
+  doi = {10.1111/j.1365-2400.2009.00719.x},
+  abstract = {Abstract Escapement goals for Chinook salmon, Oncorhynchus tshawytscha (Walbaum), populations tend to be highly uncertain due to variability in, and in some cases complete absence of, spawner-recruit data. A previous study of 25 populations from Oregon to Alaska demonstrated that watershed size is a good predictor of unfished equilibrium population size. Here this relationship is further developed by evaluating a series of Bayesian hierarchical models of increasing complexity. The model that performed best included a temporal random walk to account for patterns in the spawner-recruit residuals and life history-specific distributions for the productivity parameter.},
+  keywords = {capacity,fish-habitat model,hierarchical model,life history,maximum sustainable yield,population dynamics},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2400.2009.00719.x}
+}
+
 @article{malickRegionalScaleDeclinesProductivity2016,
   title = {Regional-{{Scale Declines}} in {{Productivity}} of {{Pink}} and {{Chum Salmon Stocks}} in {{Western North America}}},
   author = {Malick, Michael J. and Cox, Sean P.},
@@ -691,6 +826,16 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\747SR8QZ\\Malick and Cox - 2016 - Regional-Scale Declines in Productivity of Pink an.pdf}
 }
 
+@article{marentettePromotingSustainabilityContext2021,
+  title = {Promoting {{Sustainability}} in the Context of the {{Fish Stocks Provisions}} and the {{Fisheries Decision-Making Framework Incorporating}} the {{Precautionary Approach}}},
+  author = {Marentette, J R and Kronlund, A R and Healey, B and Forrest, R E and Holt, C A},
+  year = {2021},
+  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  volume = {2021/062},
+  pages = {viii + 51 p},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\KTA6JH7Z\\2021_062-eng.pdf}
+}
+
 @article{marentetteSpecificationPrecautionaryApproach2021,
   title = {Specification of {{Precautionary Approach Reference Points}} and {{Harvest Control Rules}} in {{Domestically Managed}} and {{Assessed Key Harvested Stocks In Canada}}},
   author = {Marentette, Julie R and Kronlund, A Robert and Cogliati, Karen M},
@@ -698,6 +843,24 @@
   pages = {105},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\FK4GYX9L\\Marentette et al. - Specification of Precautionary Approach Reference .pdf}
+}
+
+@techreport{mastrandreaGuidanceNoteLead2010,
+  title = {Guidance {{Note}} for {{Lead Authors}} of the {{IPCC Fifth Assessment Report}} on {{Consistent Treatment}} of {{Uncertainties}}},
+  author = {Mastrandrea, M D and Field, C B and Stocker, T F and Edenhofer, O and Ebi, K L and Frame, D J and Held, H and Kriegler, E and Mach, K J and Matschoss, P R and Plattner, G -K and Yohe, G W and Zwiers, F W},
+  year = {2010},
+  institution = {{Intergovernmental Panel on Climate Change (IPCC)}},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\P6BXX8J5\\IPCC2010_AR5_Uncertainty_Guidance_Note.pdf}
+}
+
+@techreport{mcelhanyViableSalmonidPopulations2010,
+  title = {Viable Salmonid Populations and the Recovery of Evolutionarily Significant Units.},
+  author = {McElhany, P and Ruckelshaus, M H and Ford, M J and Bjorkstedt, E P},
+  year = {2010},
+  number = {U.S. Dept. Commer., NOAA Tech. Memo. NMFS-NWFSC-42},
+  pages = {156},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\M3E47NYM\\Ruckelshaus et al. - This document should be cited as follows.pdf}
 }
 
 @article{mckechnieArchaeologicalDataProvide2014,
@@ -742,6 +905,22 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\3J2546ZW\\Mullowney et al. - Basis for A Precautionary Approach and Decision Ma.pdf}
 }
 
+@article{mullowneyBiologicalPerspectivesComplexities2020,
+  title = {Biological Perspectives on Complexities of Fisheries Co-Management: {{A}} Case Study of {{Newfoundland}} and {{Labrador}} Snow Crab},
+  shorttitle = {Biological Perspectives on Complexities of Fisheries Co-Management},
+  author = {Mullowney, Darrell R.J. and Baker, Krista D. and {Zabihi-Seissan}, Sana and Morris, Corey},
+  year = {2020},
+  month = dec,
+  journal = {Fisheries Research},
+  volume = {232},
+  pages = {105728},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2020.105728},
+  abstract = {A thrust toward fisheries co-management systems occurred globally throughout the 1990s. This was partially influenced by the collapse of groundfish stocks including the iconic northern cod and other fisheries resources in Newfoundland and Labrador (NL). The management system for NL snow crab burgeoned during this period, largely in the absence of biological information for the resource. There is a high volume of theoretical literature advocating for the benefits of fisheries co-management, but little documented perspectives from fisheries scientists actively engaged in such management systems, nor literature detailing how co-management regimes could affect scientific research or assessment programs. In this paper, in context of a large fishery, we provide specific examples of how co-management processes can influence scientific research and monitoring programs and the biological functioning of important marine resources. We undertake critical evaluation on topics including spatial scales of management, fishery timing, fishery closures, collaborative research, and harvester perceptions of stock size. We conclude there are both scientific advantages and disadvantages to operating within co-management systems, but that the NL snow crab management system has evolved to promote processes problematic to provision of the best possible science advice. We conclude that adaptive co-management measures are required to address several current challenges in order to maximize scientific value within this system. In general, the paper demonstrates how flexibility is needed by all partners involved in resource comanagement systems to adapt to fundamental scientific principles inherent in changing methodologies and the generation of knowledge.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\JU3LLQY5\\Mullowney et al. - 2020 - Biological perspectives on complexities of fisheri.pdf}
+}
+
 @techreport{nobleHabitatbasedEscapementBenchmarks2015,
   type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}. 2015/050},
   title = {Habitat-Based Escapement Benchmarks for {{Coho Salmon}} in {{Georgia Strait Mainland}}, {{Georgia Strait Vancouver Island}}, and {{Lower Fraser River Management Units}}.},
@@ -775,6 +954,44 @@
   year = {2020},
   number = {The Pacific Salmon Foundation, Vancouver BC, Canada, version 1.0},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\T7XPHSG9\\lib_459.pdf}
+}
+
+@techreport{parkenHabitatbasedMethodsEstimate2006,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
+  title = {Habitat-Based Methods to Estimate Escapement Goals for Data Limited {{Chinook}} Salmon Stocks in {{British Columbia}}, 2004},
+  author = {Parken, Charles K. and McNicol, Richard E. and Irvine, James R.},
+  year = {2006},
+  number = {2006/083},
+  pages = {vii + 67},
+  abstract = {Fisheries and Oceans Canada requires escapement goals for Chinook salmon (Oncorhynchus tshawytscha) stocks to evaluate their status and achieve objectives established by international agreements and domestic policy. Unfortunately the data typically needed to establish these `goals', using stock-recruitment techniques, are expensive to gather and are, for most stocks, lacking. This prompted us to develop the habitat-based approach to generate escapement goals described in this report. We related productive capacity to freshwater habitat area based on results from a meta-analysis of 25 Chinook stocks. Stocks were distributed between central Alaska and northern Oregon and represented a broad range of environments and life history. We developed an allometric model that predicted Smsy and Srep (spawners required to produced maximum sustained yield and replacement, respectively) from the watershed area and assessed the model's performance. The model adequately predicted the Smsy and Srep for an independent data source and out-performed a current interim method applied to British Columbia (BC) Key Streams. The habitat-based approach adequately predicted Smsy and Srep for seven case study examples, although it overestimated the productive capacity of stocks with relatively small spawning areas. Our habitat-based model can generate biologically-based escapement goals, rooted in fish-production relationships, for data limited stocks over a broad range of environments. This simple approach requires easily acquirable data and makes few assumptions. However, spawner escapements of known accuracy and reliability are required, which may impede implementation for some systems. The approach is well-suited for most data limited stocks in BC and can be tested and refined as new stock-recruitment data become available. Since the habitat-based method was more accurate than the interim method for BC Key Streams, we recommend applying it for data limited stocks in BC to establish escapement goals until more stock-specific data are available.}
+}
+
+@article{peacockMetricsSamplingDesigns2012,
+  title = {Metrics and Sampling Designs for Detecting Trends in the Distribution of Spawning {{Pacific}} Salmon ( {{{\emph{Oncorhynchus}}}} Spp.)},
+  author = {Peacock, Stephanie J. and Holt, Carrie A.},
+  editor = {Fleming, Ian},
+  year = {2012},
+  month = apr,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {69},
+  number = {4},
+  pages = {681--694},
+  issn = {0706-652X, 1205-7533},
+  doi = {10.1139/f2012-004},
+  abstract = {The distribution of individuals among populations and in space may contribute to their resilience under environmental variability. Changes in distribution may indicate the loss of genetically distinct subpopulations, the deterioration of habitat capacity, or both. The distribution of Pacific salmon (Oncorhynchus spp.) among spawning locations has recently been recognized as an important component of status assessment by USA and Canadian management agencies, but metrics of spawning distribution have not been rigorously evaluated. We evaluated three metrics of spawning distribution and four sampling designs for their ability to detect simulated contractions in the production of coho salmon (Oncorhynchus kisutch). We simulated population dynamics at 100 sites using a spawner\textendash recruit model that incorporated natural variability in recruitment, age-at-maturity, dispersal, and measurement error in observations of abundance. Sensitivity analyses revealed that high observation error and straying of spawners from their natal streams may mask changes in distribution. Furthermore, monitoring only sites with high spawner abundance, as is often practiced, failed to capture the simulated contraction of production, emphasizing the importance of matching monitoring programs with assessment objectives.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\5G64EHHM\\Peacock and Holt - 2012 - Metrics and sampling designs for detecting trends .pdf}
+}
+
+@article{peacockReviewMetricsDistribution2010a,
+  title = {A {{Review}} of {{Metrics}} of {{Distribution}} with {{Application}} to {{Conservation Units}} under {{Canada}}'s {{Wild Salmon Policy}}},
+  author = {Peacock, S J and Holt, C A},
+  year = {2010},
+  journal = {Can. Tech. Rep. Fish. Aquat. Sci.},
+  volume = {2888},
+  pages = {xii + 36},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\9VNVI9RS\\Peacock and Holt - A Review of Metrics of Distribution with Applicati.pdf}
 }
 
 @article{pestalUpdatedMethodsAssessing2012,
@@ -906,6 +1123,32 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\GY7PKW5M\\faf.12516.pdf;C\:\\Users\\HoltC\\Zotero\\storage\\9HK85ESI\\faf.html}
 }
 
+@article{riddellReview2001Chinook2002,
+  title = {Review of 2001 {{Chinook Returns}} to the {{West Coast Vancouver Island}}, {{Forecast}} of the 2002 {{Return}} to the {{Stamp River}} / {{Robertson Creek Hatchery Indicator Stock}}, and {{Outlook}} for Other {{WCVI Chinook Stocks}}},
+  author = {Riddell, B E and Luedke, W and Till, J and Taylor, S and Tompkins, A},
+  year = {2002},
+  journal = {Can. Sci. Advis. Sec. Res. Doc.},
+  volume = {2006/083},
+  pages = {44},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\Q7BBYJ7N\\Riddell et al. - Review of 2001 Chinook Returns to the West Coast V.pdf}
+}
+
+@article{rossiInferringFisheriesStock2019,
+  title = {Inferring Fisheries Stock Status from Competing Hypotheses},
+  author = {Rossi, Steven P. and Cox, Sean P. and Beno{\^i}t, Hugues P. and Swain, Douglas P.},
+  year = {2019},
+  month = aug,
+  journal = {Fisheries Research},
+  volume = {216},
+  pages = {155--166},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2019.04.011},
+  abstract = {A suite of statistical catch-at-age models with time-varying natural mortality (M), selectivity and catchability were fitted to data for eastern Georges Bank Atlantic Cod (Gadus morhua) and Georges Bank Yellowtail Flounder (Limanda ferruginea) to address hypotheses regarding nonstationarities in these systems. Model averaging and ensemble methods were used to combine the results of converged models for each species. Model averaging was based on both predictive (i.e., cross-validation, AIC) and retrospective performance metrics. Models allowing large shifts in M provided the best fit to observed data for both species and were also regarded as the most plausible. For Atlantic Cod, variance in biomass estimates among the individual models was very high and multimodel estimates were sensitive to the relative weight given to competing models. In contrast, converged Yellowtail Flounder models produced broadly similar output and multimodel estimates were more robust to model weights. Our results suggest that the plausibility of competing models should be scrutinized, particularly when structural uncertainty is high.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\T683EJ5L\\Rossi et al. - 2019 - Inferring fisheries stock status from competing hy.pdf}
+}
+
 @techreport{sainsburyBestPracticeReference2008,
   title = {Best {{Practice}} Reference {{Points}} for {{Australian Fisheries}}},
   author = {Sainsbury, Keith},
@@ -958,6 +1201,17 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\AMR4H3FQ\\Shelton and Rice - Limits to overfishing reference points in the con.pdf}
 }
 
+@article{stalbergCanadaPolicyConservation2009,
+  title = {Canada's {{Policy}} for {{Conservation}} of {{Wild Pacific Salmon}}: {{Stream}}, {{Lake}}, and {{Estuarine Habitat Indicators}}},
+  author = {Stalberg, H C and Lauzier, R B and MacIsaac, E A and Porter, M and Murray, C},
+  year = {2009},
+  journal = {Can. Manuscr. Fish. Aquat. Sci.},
+  volume = {2859},
+  pages = {151},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\V69MDS9M\\Stalberg et al. - Canada’s Policy for Conservation of Wild Pacific S.pdf}
+}
+
 @article{statonIncorporatingDemographicInformation2021,
   title = {Incorporating Demographic Information into Spawner\textendash Recruit Analyses Alters Biological Reference Point Estimates for a Western {{Alaska}} Salmon Population},
   author = {Staton, Benjamin A. and Catalano, Matthew J. and Fleischman, Steven J. and Ohlberger, Jan},
@@ -1003,6 +1257,12 @@
   abstract = {The potential influence of climate change on the future distribution and abundance of fish (and therefore commercial fisheries and food security) is increasingly recognized in the fishery management community. A changing climate will likely have differing effects on different species; some will flourish, some will flounder. Management targets for fishing mortality and spawning biomass are often calculated by assuming stationary population processes, but under climate change, this assumption may be violated. Non-stationary population processes can introduce bias into estimates of biomass from stock assessments and calculations of target fishing mortalities and biomasses. However, few accepted frameworks exist for incorporating the changing influence of the environment on exploited populations into management strategies. Identifying changes in population processes due to environmental influences is important in order to enable climate-enhanced management strategy evaluations to elucidate the potential benefits and costs of changing management targets. Cost/benefit analyses will also be useful when coincidentally caught species respond differently to environmental change.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\AIQKL8VN\\Szuwalski and Hollowed - 2016 - Climate change and non-stationary population proce.pdf}
+}
+
+@misc{TreatyGovernmentCanada2019,
+  title = {Treaty {{Between}} the {{Government}} of {{Canada}} and Athe {{Government}} of the {{United States}} of {{America Concerning Pacific Salmon}}},
+  year = {2019},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\H83SR2AU\\Pacific-Salmon-Treaty2019.pdf}
 }
 
 @misc{USCodeFederal2021,
