--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -56,7 +56,7 @@ When assessing CU status relative to a single abundance-based lower benchmark in
 
 ### Rapid Multidimensional Scanning Tool{#rapidToolMethods}
 
-One of the methods we consider to estimate CU status for proportion-based LRPs relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on an more regular basis than the time-intensive WSP assessment approach allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from the WSP assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020], and was further ground-truthed with data for Fraser River Chum and Pink Salmon (Pestal et al. in prep ).  <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Briefly, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. 
+One of the methods we consider to estimate CU status for proportion-based LRPs relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep) <!--CH: CSAS has asked that in prep and in review documents be included as footnotes instead-->. The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on an more regular basis than the time-intensive WSP assessment approach allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from the WSP assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020], and was further ground-truthed with data for Fraser River Chum and Pink Salmon (Pestal et al. in prep ).  <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Briefly, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. 
 
 <!--
 CH comment on last sentence; "with the exception of Interior Fraser River Coho which has been vetted through the State of the Salmon program and local experts (Pestal et al. in prep)"
@@ -248,13 +248,15 @@ The following steps were taken to calculate projection-based LRPs:
 
 CH (4 Dec): revised to "current exploitation" to match newly revised text above. Isn't the current MP just a fixed ER? so perhaps no need to include obs errors, though annual variability in ER is included. I think deferring to case study applications for details is reasonable.
 
+Also, I added this sentence to Methods section of Guidelines paper, "We developed projection-based LRPs for SMUs that are managed under constant exploitation rates, though more complicated management procedures that also include an observation component could also be included in future iterations" CH: is this true???
    -->
 
 
+<!--CH: should bins be 201:400, 401:600 fish, etc  instead of 200:400, 400:600, I've used revised bin ranges in the methods section of Guidelines paper, and tentatively changed them here and in the figure caption. Please change back if need be.-->
    2. For each simulated year-trial combination, characterize abundances as follows:
 
-      * Assign aggregate SMU level spawner abundance for each year-trial combination to an abundance bin ($AggS_{bin}$), based on intervals of 200 fish . E.g., $AggS_{bin}$ = 0:200 fish, 200:400 fish, 400:600 fish, ... etc.
-
+      * Assign aggregate SMU level spawner abundance for each year-trial combination to an abundance bin ($AggS_{bin}$), based on intervals of 200 fish . E.g., $AggS_{bin}$ = 0:200 fish, 201:400 fish, 401:600 fish, ... etc. 
+      
       * Determine whether all CUs for that year-trial combination were above their CU-level lower benchmarks on abundances. If they were, the year-trial combination is scored as a success (1). If they were not, the year-trial combination is scored as a failure (0).
 
 
@@ -271,11 +273,12 @@ CH (4 Dec): revised to "current exploitation" to match newly revised text above.
 \end{equation}
 For example, if 125 of the 500 realizations that fell within the $SAgg_{bin}$ of 10,000 - 10,200 fish were 'successes', there would be a 25% probability (125 / 500 = 0.25) that all CUs would be above their lower benchmarks when aggregate abundances are between 10,000 and 10,200 fish.
 
-   4. Identify the LRP as the mid-point of the aggregate abundance bin, $AggS_{bin}$, that is closest to the required probability threshold that all CUs are above their LBMs.
+   4. Identify the LRP as the mid-point of the aggregate abundance bin, $AggS_{bin}$, that is closest to the desired probability threshold that all CUs are above their LBMs.
 
+<!--CH: i changed 'required probabiltiy' to 'desired probabilty', okay?-->
 An example of the derivation of an LRP from the projected curve of aggregate abundance bins versus the probability of all CUs being > their lower benchmark is shown in Figure \@ref(fig:example-projectedCurve) for the four probability levels used in our case studies (p* = 0.5, 0.66, 0.90, and 0.99). Uncertainty estimates for LRPs are not available based on this method, but the approach does integrate all uncertainties in underlying parameters to identify LRPs with specified probabilities of all CUs being above LBM. In addition, LRP estimates could be presented as a range based on the $SAgg_{bin}$ bin size.
 
-```{r example-projectedCurve, fig.cap="Example of projected probability curve derived from projections over 30 years and 10,000 MC trials.  The curve shows the projected probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance, where aggregate spawning abundance is really a bin of 200 fish (e.g., 0-200, 200-400, etc.). Each dot in the curve represents a single combination of year and simulation trial. Coloured lines demonstrate how aggregate abundance LRPs are calculated for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) for the probability that all CUs are greater than their LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
+```{r example-projectedCurve, fig.cap="Example of projected probability curve derived from projections over 30 years and 10,000 MC trials.  The curve shows the projected probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance, where aggregate spawning abundance is a bin of 200 fish (e.g., 0-200, 201-400, etc.). Each dot in the curve represents a single combination of year and simulation trial. Coloured lines demonstrate how aggregate abundance LRPs are calculated for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) for the probability that all CUs are greater than their LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/methods-Example-ProjectedLRP.png")
 ```
 
