--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -1,18 +1,51 @@
-# Case Studies Used to Support the Development of Guidance {#case-studies}
+# CASE STUDIES {#case-studies}
 
--	Three case studies have been used to inform the guidelines presented in Section 4 of this document (Interior Fraser Coho SMU, West Coast Vancouver Island SMU, and South Coast Chum SMU). 
--	These three case studies were used to demonstrate and quantitatively evaluate performance of the two aggregate-abundance based LRPs described in Section 2 (Empirical and Projection-based LRPs). A combination of retrospective analyses and simulations analyses were used (will give 1-2 sentence description of retrospective and simulation-based methods).
--	In this section, we provide a brief description of each case study and associated LRPs.  
--	More thorough descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, are available in a separate research document, A Case Study Application of LRP Estimation Methods to Pacific Salmon SMUs.
+We applied candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies to demonstrate the application of candidate methods, evaluate sensitivity of LRPs to various assumptions, and inform the guidelines presented in Section \@ref(guidelines).  The case studies were Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inner South Coast Chum Salmon  (*Oncorhynchus keta*)- excluding Fraser, each comprising of 3-7 CUs<!--CH: latin names for other salmon species provided at first instance in Ch1. Chum salmon not mentioned in that chapter-->. These were chosen because they varied in data types and availabilities ranging from data-rich (Interior Fraser River Coho) to data-limited (Inner South Coast Chum), to represent a range of SMUs that may require LRPs. Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast CHum) and two are included in the proposed first batch of stocks to be put under regulation for the Fish Stock provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. More thorough descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, are available in Holt et al. (in review).
 
-- add density plot (or box plot or violin plot) of distribution of between-CU spawner correlations for the 3 case studies.
+## Interior Fraser River Coho
 
-## Interior Fraser Coho
+The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, $S_{gen}$ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status.
+<!--CH: mention average correlation in spawner abundances among CUs-->
+We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2000 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion-based and logistic regression-based LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection-based LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. 
+
+We characterized CU status in three ways, using: (1) the Rapid Multidimensional Scanning Tool, (2) CU-level abundances relative to $S_{gen}$ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Rapid Multidimensional Scanning Tool are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009a], we apply the other two approaches (2) and (3) to support the development aggregate abundance-based LRPs and for a point of comparison with the Rapid Multidimensional Scanning Tool. Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide logistic regression-based and projection-based LRPs for demonstration purposes.
+
+For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to underlying assumption with a retrospective analysis by removing years of data an re-estimating CU-level benchmarks, CU statuses, SMU-level LRPs, as well as sensitivity analyses where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses on structural assumptions about stock-recruitment relationship when deriving CU-level benchmarks for all proportion-based and aggregate abundance-based LRP methods.
+
+We found that LRPs and resulting status were more sensitive to structural assumptions about the shape of the stock-recruitment model than to the choice of LRP methods or CU assessment approach (Rapid Multidimensional Scanning Tool vs single-metric on spawner abundances vs. single metric on distribution) or the addition of more years or CUs of data.  However, we note that the inclusion of additional CUs occasionally results in more pessimistic status relative to the LRP, but not more optimistic status, possibly creating disincentives to monitoring. This asymmetry is a consequence of the LRP being triggered by any single CU having red status. <!--CH: Kendra, is there anything more we should highlight here?-->
+
+For this case study, we further demonstrated the approach of averaging over structural uncertainties to provide a projection-based LRP that accounts for that uncertainty. Similar averaging is also possible for logistic regression-based LRPs.
 
 ## West Coast Vancouver Island Chinook
 
-## South Coast Chum (excluding Fraser)
+The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002]. Hatchery enhancement is an important component of many of these stocks and only indicator stocks without significant enhancement (PNI>0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).
+<!--CH: mention average correlation in spawner abundances among CUs-->
+
+Under the WSP, CUs are identified at a spatial scale to conserve for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). Similar to the Interior Fraser River Coho case study analysis that considered spawner abundances to subpopulations within CUs, we considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these units.
+
+Two of the 3 CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor marine survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. 
+
+Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, $S_{REP}$, and $S_{MSY}$, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and $S_{REP}$ was re-estimated using a hierarchical Bayesian model (as in @liermannUsingAccessibleWatershed2010), and applied to inlets of WCVI Chinook. 
+
+We characterized CU status in two ways for this case study, using: (1) the Rapid Multidimensional Scanning Tool, (2) CU-level abundances relative to $S_{gen}$ derived from watershed-area model estimates of $S_{REP}$ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportion-based LRPs and projection-based LRPs. Based on CU-level assessments, there were no years in historical data where all CUs were above the red zone, so it was not possible to identify logistic regression-based LRPs.  Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide projection-based LRPs for demonstration purposes. We implemented sensitivity analyses on projection-based LRPs to two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in productivity, and capacity are provided in an Appendix to Holt et al. in (review).
+
+In this case study, we found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection-based were also highly sensitivity to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) from this value resulted in relatively large changes in LRPs estimates. 
 
 
+## Inner South Coast Chum (excluding Fraser)
+
+The 'Inside South Coast Chum - Non-Fraser' (ISC-NF Chum) SMU includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate 'Inside South Coast Chum - Fraser' SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. 
+<!--CH: mention average correlation in spawner abundances among CUs-->
+
+The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions, and recruitment are too unreliable for quantitative inclusion in stock assessments for this SMU.  Instead,  benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed hatchery-dominated systems (PNI <<0.5). The remaining systems had little or no hatchery enhancement (PNI likely >0.72). Times-series of proportion of hatchery-origin spawners were not available and so total spawner abundances were used for assessment.
+
+For this case study, we consider two approaches for characterizing CU status: (1) the Rapid Multidimensional Scanning Tool and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportion-based LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportion-based LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression-based LRPs for this SMU.
+
+
+We found that assessments based on the Rapid Multidimensional Scanning Tool gave similar results as the single-metric on spawner abundances relative to percentile-based benchmarks, though there was some variability among years. Also, as for Inner Fraser River Coho Salmon, increasing the number of CUs included in analyses resulted in the same or more pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing.
+
+
+<!--To add!!-->
 Table 1. Overview of benchmarks and LRP estimation methods examined for each case study.
 (to be included)
+- add density plot (or box plot or violin plot) of distribution of between-CU spawner correlations for the 3 case studies.
